--- a/cart.html
+++ b/cart.html
@@ -6,7 +6,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="style/style.css">
   <link rel="stylesheet" type="text/css" href="style/all.css">
-  <title></title>
+  <title>Cart</title>
 </head>
 <body>
     <header>
