--- a/index.html
+++ b/index.html
@@ -85,10 +85,10 @@
 <section>
   <div class="container">
     <div class="row">
-      <div class="col-6">
+      <div class="col-lg-6 col-md-12">
         <input type="text" class="form-control searcht" id="search" placeholder="Search">
       </div>
-      <div class="col-6">
+      <div class="col-lg-6 col-md-12">
 
         <select class="form-select searchop" aria-label="Default select example">
           <option selected value="Name">Shop By Name</option>
