--- a/index.html
+++ b/index.html
@@ -74,15 +74,26 @@
       </div>
     </nav>
 </header>
+<main>
+<div class="hero-img position-relative">
+<div class="overlay">
+  <div class="main-content">
+    <h1>Discover Your Signature Look with Exclusive Beauty Brands !</h1>
+    <a class="btn btn-dark text-light fs-5 mx-2 my-2" onClick="document.getElementsByClassName('Best-Sellers')[0].scrollIntoView();">Explore Now</a>
+    <a class="btn btn-light text-dark fs-5 mx-2 my-2">About Us</a>
+  </div>
+</div>
+</div>
+</main>
 
-<section>
+<section class="Best-Sellers">
   <div class="s" >
       
         <p>Best Sellers</p>
       
   </div>
 </section>
-<section>
+<section class="filtering">
   <div class="container">
     <div class="row">
       <div class="col-lg-6 col-md-12">
