--- a/index.html
+++ b/index.html
@@ -105,11 +105,10 @@
           <div class="main-content">
             <h1>Discover Your Signature Look with Exclusive Beauty Brands !</h1>
             <a
-              class="btn btn-dark text-light fs-5 mx-2 my-2"
+              class="btn btn-light fs-5 mx-2 my-2"
               onClick="document.getElementsByClassName('Best-Sellers')[0].scrollIntoView();"
               >Explore Now</a
             >
-            <a class="btn btn-light text-dark fs-5 mx-2 my-2">About Us</a>
           </div>
         </div>
       </div>
