--- a/index.html
+++ b/index.html
@@ -48,7 +48,10 @@
               <li class="nav-item mx-lg-2">
                 <a class="nav-link text-dark" href="#">About Us</a>
               </li>
-              <li class="nav-item dropdown mx-lg-2">
+              <li class="nav-item mx-lg-2">
+                <a class="nav-link text-dark" href="#">Shop</a>
+              </li>
+              <!-- <li class="nav-item dropdown mx-lg-2">
                 <a
                   class="nav-link dropdown-toggle text-dark"
                   href="#"
@@ -64,7 +67,7 @@
                   <li><hr class="dropdown-divider" /></li>
                   <li><a class="dropdown-item" href="#">Gifts</a></li>
                 </ul>
-              </li>
+              </li> -->
               <li class="nav-item mx-lg-2">
                 <a class="nav-link text-dark" href="#">Contact Us</a>
               </li>
